@@ -54,7 +54,7 @@ text \<open>
 
     @{syntax_def session_entry}: @'session' spec '=' (@{syntax name} '+')? body
     ;
-    body: description? options? (theories+) \<newline> files? (document_files*)
+    body: description? options? (theories+) \<newline> (document_files*)
     ;
     spec: @{syntax name} groups? dir?
     ;
@@ -76,16 +76,13 @@ text \<open>
     ;
     theory_entry: @{syntax name} ('(' @'global' ')')?
     ;
-    files: @'files' (@{syntax name}+)
-    ;
     document_files: @'document_files' ('(' dir ')')? (@{syntax name}+)
   \<close>}
 
   \<^descr> \isakeyword{session}~\<open>A = B + body\<close> defines a new session \<open>A\<close> based on
-  parent session \<open>B\<close>, with its content given in \<open>body\<close> (imported sessions,
-  theories and auxiliary source files). Note that a parent (like \<open>HOL\<close>) is
-  mandatory in practical applications: only Isabelle/Pure can bootstrap itself
-  from nothing.
+  parent session \<open>B\<close>, with its content given in \<open>body\<close> (imported sessions and
+  theories). Note that a parent (like \<open>HOL\<close>) is mandatory in practical
+  applications: only Isabelle/Pure can bootstrap itself from nothing.
 
   All such session specifications together describe a hierarchy (graph) of
   sessions, with globally unique names. The new session name \<open>A\<close> should be
@@ -103,9 +100,8 @@ text \<open>
   directory for this session; by default this is the current directory of the
   \<^verbatim>\<open>ROOT\<close> file.
 
-  All theories and auxiliary source files are located relatively to the
-  session directory. The prover process is run within the same as its current
-  working directory.
+  All theory files are located relatively to the session directory. The prover
+  process is run within the same as its current working directory.
 
   \<^descr> \isakeyword{description}~\<open>text\<close> is a free-form annotation for this
   session.
@@ -134,12 +130,6 @@ text \<open>
   literally in other session specifications or theory imports. In contrast,
   the default is to qualify theory names by the session name, in order to
   ensure globally unique names in big session graphs.
-
-  \<^descr> \isakeyword{files}~\<open>files\<close> lists additional source files that are involved
-  in the processing of this session. This should cover anything outside the
-  formal content of the theory sources. In contrast, files that are loaded
-  formally within a theory, e.g.\ via @{command "ML_file"}, need not be
-  declared again.
 
   \<^descr> \isakeyword{document_files}~\<open>(\<close>\isakeyword{in}~\<open>base_dir) files\<close> lists
   source files for document preparation, typically \<^verbatim>\<open>.tex\<close> and \<^verbatim>\<open>.sty\<close> for
